feat: added images to the webpages

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </nav>
     <section>
         <figure>
-            <img src="assets/images/beach.jpg" alt="En bild på stranden i dublin">
+            <img src="assets/images/city.jpg" alt="En bild på staden dublin">
         </figure>
     </section>
 </body>
